feat: start LR(1) state construction